--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="Portfolio.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     </header>
 
     <section id="home">
-        <h1>Hi, I'm [Your Name]</h1>
+        <h1>Hi, I'm Pooja Subray Hegde</h1>
         <p>Aspiring Web Developer & Coder</p>
         <a href="#contact" class="btn">Contact Me</a>
     </section>
@@ -55,6 +55,6 @@
         <p>&copy; 2024 Pooja Hegde. All rights reserved.</p>
     </footer>
 
-    <script src="scripts/script.js"></script>
+    <script src="Portfolio.js"></script>
 </body>
 </html>
